# GPIO

./: .gitignore  CMakeLists.txt  README.md
cmake/: CompileOptions.cmake
src/: CMakeLists.txt
src/app/: CMakeLists.txt
src/app/app/: main.cpp
src/libgpio/: CMakeLists.txt
src/libgpio/libgpio/: funcs.cpp  funcs.hpp
